--- a/source/processor/Dockerfile
+++ b/source/processor/Dockerfile
@@ -1,23 +1,15 @@
-# Base image
+# Use a Python base image
 FROM python:3.9-slim
 
-# Set working directory
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy requirements file
-COPY requirements.txt .
+# Copy the Python script into the container
+COPY . .
 
-# Install dependencies
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the FastAPI application file
-COPY main.py .
 
-# Set environment variables for RabbitMQ
-ENV RABBITMQ_HOST=localhost
-
-# Expose the port
-EXPOSE 8001
-
-# Run the FastAPI application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+# Run the Python script when the container starts
+CMD ["python", "main.py"]
