--- a/source/processor/requirements.txt
+++ b/source/processor/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.95.2
+ibm_cos_sdk==2.13.1
+ibm_cos_sdk_core==2.13.1
 pika==1.3.2
-uvicorn==0.22.0
-ibm-cos-sdk
+python-dotenv==1.0.0
 python-multipart
