--- a/source/sender/requirements.txt
+++ b/source/sender/requirements.txt
@@ -1,5 +1,7 @@
-fastapi>=0.95.2
-pika>=1.3.2
-uvicorn>=0.22.0
-ibm-cos-sdk
+fastapi==0.96.0
+ibm_cos_sdk==2.13.1
+ibm_cos_sdk_core==2.13.1
+pika==1.3.2
+python-dotenv==1.0.0
+uvicorn==0.22.0
 python-multipart
